HTML File for Webpage

--- a/Projects/templates/index.html
+++ b/Projects/templates/index.html
@@ -19,7 +19,7 @@
 
                 <br><br><br><br>
 
-                <a href="https://github.com/pn89348/CIS24C">View Review Analysis on Github<a>
+                <a href="https://github.com/pn89348/CIS24C/blob/master/Projects/Project.ipynb">View Review Analysis on Github<a>
                 <h4>Pranav's Info<h4><br>
                 <a href="mailto:pranav7777@outlook.com">Email: pranav7777@oulook.com<a><br>
                 <a href="https://www.linkedin.com/in/pranav-nigam-a622a3124/">LinkedIn<a><br>
