HTML File for Webpage

--- a/Projects/templates/index.html
+++ b/Projects/templates/index.html
@@ -12,10 +12,8 @@
                         <textarea title="Text" placeholder="Enter some text here to get its sentiment" name="text_area" rows="10" cols="75">{{text_input}}</textarea><br><br>
                         <input type="submit" name="action" value="Analyze Text"><br><br><br>
                 </form>
-                <p>Results:<p><br>
-                <form method="POST" action="/">
-                        <textarea title="Sentiment: " name="result_area" rows="2" cols="40">{{text_output}}</textarea>
-                </form>
+                <p>Sentiment:<p>
+                <p>{{text_output}}</p>
 
                 <br><br><br><br>
 
